--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </div>
           <div class="col d-flex align-items-start">
             <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-              <img src="climber.jpg" alt="climber" height="30">
+              <img src="dude.png" alt="climber" height="30">
             </div>
             <div>
               <h3 class="fs-2 text-body-emphasis">Full Day Climbing</h3>
