--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               <a class="nav-link" href="services.html">Services</a>
-              <a class="nav-link" href="pricing.html">Pricing</a>
+              <!-- <a class="nav-link" href="pricing.html">Pricing</a> -->
             </div>
           </div>
         </div>
@@ -50,7 +50,7 @@
             <div>
               <h3 class="fs-2 text-body-emphasis">Half Day Climbing</h3>
               <p>4 full hours of guided rock climbing in Red Rocks, Nevada. Style of your choice, trad or sport climbing.</p>
-              <a href="pricing.html" class="btn btn-primary">
+              <a href="services.html" class="btn btn-primary">
                 Pricing
               </a>
             </div>
@@ -117,7 +117,7 @@
           <ul class="nav col-md-4 justify-content-end">
             <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">Home</a></li>
             <li class="nav-item"><a href="services.html" class="nav-link px-2 text-body-secondary">Services</a></li>
-            <li class="nav-item"><a href="pricing.html" class="nav-link px-2 text-body-secondary">Pricing</a></li>
+            <!-- <li class="nav-item"><a href="pricing.html" class="nav-link px-2 text-body-secondary">Pricing</a></li> -->
           </ul>
         </footer>
       </div>
